CSE420/Lab/Lab3/draft/22201344 - Copy/y.output
Terminals unused in grammar

    DO
    BREAK
    DOUBLE
    SWITCH
    CASE
    DEFAULT
    CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 $@1: ε

    7 $@2: ε

    8 func_definition: type_specifier ID LPAREN $@1 param_list RPAREN $@2 compound_statement

    9 $@3: ε

   10 $@4: ε

   11 func_definition: type_specifier ID LPAREN $@3 RPAREN $@4 compound_statement

   12 param_list: param_list COMMA type_specifier ID
   13           | param_list COMMA type_specifier
   14           | type_specifier ID
   15           | type_specifier

   16 $@5: ε

   17 compound_statement: LCURL $@5 statements RCURL

   18 $@6: ε

   19 compound_statement: LCURL $@6 RCURL

   20 variable_decl: type_specifier declaration_list SEMICOLON

   21 type_specifier: INT
   22               | FLOAT
   23               | VOID
   24               | CHAR

   25 declaration_list: declaration_list COMMA ID
   26                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   27                 | ID
   28                 | ID LTHIRD CONST_INT RTHIRD

   29 statements: statement
   30           | statements statement

   31 statement: variable_decl
   32          | func_definition
   33          | expression_statement
   34          | compound_statement
   35          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   36          | IF LPAREN expression RPAREN statement
   37          | IF LPAREN expression RPAREN statement ELSE statement
   38          | WHILE LPAREN expression RPAREN statement
   39          | PRINTLN LPAREN ID RPAREN SEMICOLON
   40          | RETURN expression SEMICOLON

   41 expression_statement: SEMICOLON
   42                     | expression SEMICOLON

   43 variable: ID
   44         | ID LTHIRD expression RTHIRD

   45 expression: logic_expression
   46           | variable ASSIGNOP logic_expression

   47 logic_expression: rel_expression
   48                 | rel_expression LOGICOP rel_expression

   49 rel_expression: simple_expression
   50               | simple_expression RELOP simple_expression

   51 simple_expression: term
   52                  | simple_expression ADDOP term

   53 term: unary_expression
   54     | term MULOP unary_expression

   55 unary_expression: ADDOP unary_expression
   56                 | NOT unary_expression
   57                 | factor_info

   58 factor_info: factor

   59 factor: variable

   60 $@7: ε

   61 factor: ID LPAREN $@7 argument_list RPAREN
   62       | LPAREN expression RPAREN
   63       | CONST_INT
   64       | CONST_FLOAT
   65       | variable INCOP
   66       | variable DECOP

   67 argument_list: arguments
   68              | ε

   69 arguments: arguments COMMA logic_expression
   70          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 36 37
    ELSE (259) 37
    FOR (260) 35
    WHILE (261) 38
    DO (262)
    BREAK (263)
    INT (264) 21
    CHAR (265) 24
    FLOAT (266) 22
    DOUBLE (267)
    VOID (268) 23
    RETURN (269) 40
    SWITCH (270)
    CASE (271)
    DEFAULT (272)
    CONTINUE (273)
    PRINTLN (274) 39
    ADDOP (275) 52 55
    MULOP (276) 54
    INCOP (277) 65
    DECOP (278) 66
    RELOP (279) 50
    ASSIGNOP (280) 46
    LOGICOP (281) 48
    NOT (282) 56
    LPAREN (283) 8 11 35 36 37 38 39 61 62
    RPAREN (284) 8 11 35 36 37 38 39 61 62
    LCURL (285) 17 19
    RCURL (286) 17 19
    LTHIRD (287) 26 28 44
    RTHIRD (288) 26 28 44
    COMMA (289) 12 13 25 26 69
    SEMICOLON (290) 20 39 40 41 42
    CONST_INT (291) 26 28 63
    CONST_FLOAT (292) 64
    ID (293) 8 11 12 14 25 26 27 28 39 43 44 61
    LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    start (41)
        on left: 1
        on right: 0
    program (42)
        on left: 2 3
        on right: 1 2
    unit (43)
        on left: 4 5
        on right: 2 3
    func_definition (44)
        on left: 8 11
        on right: 5 32
    $@1 (45)
        on left: 6
        on right: 8
    $@2 (46)
        on left: 7
        on right: 8
    $@3 (47)
        on left: 9
        on right: 11
    $@4 (48)
        on left: 10
        on right: 11
    param_list (49)
        on left: 12 13 14 15
        on right: 8 12 13
    compound_statement (50)
        on left: 17 19
        on right: 8 11 34
    $@5 (51)
        on left: 16
        on right: 17
    $@6 (52)
        on left: 18
        on right: 19
    variable_decl (53)
        on left: 20
        on right: 4 31
    type_specifier (54)
        on left: 21 22 23 24
        on right: 8 11 12 13 14 15 20
    declaration_list (55)
        on left: 25 26 27 28
        on right: 20 25 26
    statements (56)
        on left: 29 30
        on right: 17 30
    statement (57)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 29 30 35 36 37 38
    expression_statement (58)
        on left: 41 42
        on right: 33 35
    variable (59)
        on left: 43 44
        on right: 46 59 65 66
    expression (60)
        on left: 45 46
        on right: 35 36 37 38 40 42 44 62
    logic_expression (61)
        on left: 47 48
        on right: 45 46 69 70
    rel_expression (62)
        on left: 49 50
        on right: 47 48
    simple_expression (63)
        on left: 51 52
        on right: 49 50 52
    term (64)
        on left: 53 54
        on right: 51 52 54
    unary_expression (65)
        on left: 55 56 57
        on right: 53 54 55 56
    factor_info (66)
        on left: 58
        on right: 57
    factor (67)
        on left: 59 61 62 63 64 65 66
        on right: 58
    $@7 (68)
        on left: 60
        on right: 61
    argument_list (69)
        on left: 67 68
        on right: 61
    arguments (70)
        on left: 69 70
        on right: 67 69


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   21 type_specifier: INT •

    $default  reduce using rule 21 (type_specifier)


State 2

   24 type_specifier: CHAR •

    $default  reduce using rule 24 (type_specifier)


State 3

   22 type_specifier: FLOAT •

    $default  reduce using rule 22 (type_specifier)


State 4

   23 type_specifier: VOID •

    $default  reduce using rule 23 (type_specifier)


State 5

    0 $accept: start • $end

    $end  shift, and go to state 11


State 6

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit •

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl •

    $default  reduce using rule 4 (unit)


State 10

    8 func_definition: type_specifier • ID LPAREN $@1 param_list RPAREN $@2 compound_statement
   11                | type_specifier • ID LPAREN $@3 RPAREN $@4 compound_statement
   20 variable_decl: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end •

    $default  accept


State 12

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 13

    8 func_definition: type_specifier ID • LPAREN $@1 param_list RPAREN $@2 compound_statement
   11                | type_specifier ID • LPAREN $@3 RPAREN $@4 compound_statement
   27 declaration_list: ID •
   28                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 27 (declaration_list)


State 14

   20 variable_decl: type_specifier declaration_list • SEMICOLON
   25 declaration_list: declaration_list • COMMA ID
   26                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    8 func_definition: type_specifier ID LPAREN • $@1 param_list RPAREN $@2 compound_statement
   11                | type_specifier ID LPAREN • $@3 RPAREN $@4 compound_statement

    RPAREN    reduce using rule 9 ($@3)
    $default  reduce using rule 6 ($@1)

    $@1  go to state 19
    $@3  go to state 20


State 16

   28 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 17

   25 declaration_list: declaration_list COMMA • ID
   26                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

   20 variable_decl: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 20 (variable_decl)


State 19

    8 func_definition: type_specifier ID LPAREN $@1 • param_list RPAREN $@2 compound_statement

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    param_list      go to state 23
    type_specifier  go to state 24


State 20

   11 func_definition: type_specifier ID LPAREN $@3 • RPAREN $@4 compound_statement

    RPAREN  shift, and go to state 25


State 21

   28 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 26


State 22

   25 declaration_list: declaration_list COMMA ID •
   26                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 27

    $default  reduce using rule 25 (declaration_list)


State 23

    8 func_definition: type_specifier ID LPAREN $@1 param_list • RPAREN $@2 compound_statement
   12 param_list: param_list • COMMA type_specifier ID
   13           | param_list • COMMA type_specifier

    RPAREN  shift, and go to state 28
    COMMA   shift, and go to state 29


State 24

   14 param_list: type_specifier • ID
   15           | type_specifier •

    ID  shift, and go to state 30

    $default  reduce using rule 15 (param_list)


State 25

   11 func_definition: type_specifier ID LPAREN $@3 RPAREN • $@4 compound_statement

    $default  reduce using rule 10 ($@4)

    $@4  go to state 31


State 26

   28 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 28 (declaration_list)


State 27

   26 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 28

    8 func_definition: type_specifier ID LPAREN $@1 param_list RPAREN • $@2 compound_statement

    $default  reduce using rule 7 ($@2)

    $@2  go to state 33


State 29

   12 param_list: param_list COMMA • type_specifier ID
   13           | param_list COMMA • type_specifier

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 34


State 30

   14 param_list: type_specifier ID •

    $default  reduce using rule 14 (param_list)


State 31

   11 func_definition: type_specifier ID LPAREN $@3 RPAREN $@4 • compound_statement

    LCURL  shift, and go to state 35

    compound_statement  go to state 36


State 32

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 37


State 33

    8 func_definition: type_specifier ID LPAREN $@1 param_list RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 35

    compound_statement  go to state 38


State 34

   12 param_list: param_list COMMA type_specifier • ID
   13           | param_list COMMA type_specifier •

    ID  shift, and go to state 39

    $default  reduce using rule 13 (param_list)


State 35

   17 compound_statement: LCURL • $@5 statements RCURL
   19                   | LCURL • $@6 RCURL

    RCURL     reduce using rule 18 ($@6)
    $default  reduce using rule 16 ($@5)

    $@5  go to state 40
    $@6  go to state 41


State 36

   11 func_definition: type_specifier ID LPAREN $@3 RPAREN $@4 compound_statement •

    $default  reduce using rule 11 (func_definition)


State 37

   26 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 26 (declaration_list)


State 38

    8 func_definition: type_specifier ID LPAREN $@1 param_list RPAREN $@2 compound_statement •

    $default  reduce using rule 8 (func_definition)


State 39

   12 param_list: param_list COMMA type_specifier ID •

    $default  reduce using rule 12 (param_list)


State 40

   17 compound_statement: LCURL $@5 • statements RCURL

    IF           shift, and go to state 42
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 35
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 10
    statements            go to state 57
    statement             go to state 58
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 41

   19 compound_statement: LCURL $@6 • RCURL

    RCURL  shift, and go to state 69


State 42

   36 statement: IF • LPAREN expression RPAREN statement
   37          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 70


State 43

   35 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 71


State 44

   38 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 72


State 45

   40 statement: RETURN • expression SEMICOLON

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 73
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 46

   39 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 74


State 47

   55 unary_expression: ADDOP • unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 75
    unary_expression  go to state 76
    factor_info       go to state 67
    factor            go to state 68


State 48

   56 unary_expression: NOT • unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 75
    unary_expression  go to state 77
    factor_info       go to state 67
    factor            go to state 68


State 49

   62 factor: LPAREN • expression RPAREN

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 78
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 50

   41 expression_statement: SEMICOLON •

    $default  reduce using rule 41 (expression_statement)


State 51

   63 factor: CONST_INT •

    $default  reduce using rule 63 (factor)


State 52

   64 factor: CONST_FLOAT •

    $default  reduce using rule 64 (factor)


State 53

   43 variable: ID •
   44         | ID • LTHIRD expression RTHIRD
   61 factor: ID • LPAREN $@7 argument_list RPAREN

    LPAREN  shift, and go to state 79
    LTHIRD  shift, and go to state 80

    $default  reduce using rule 43 (variable)


State 54

   32 statement: func_definition •

    $default  reduce using rule 32 (statement)


State 55

   34 statement: compound_statement •

    $default  reduce using rule 34 (statement)


State 56

   31 statement: variable_decl •

    $default  reduce using rule 31 (statement)


State 57

   17 compound_statement: LCURL $@5 statements • RCURL
   30 statements: statements • statement

    IF           shift, and go to state 42
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 35
    RCURL        shift, and go to state 81
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 10
    statement             go to state 82
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 58

   29 statements: statement •

    $default  reduce using rule 29 (statements)


State 59

   33 statement: expression_statement •

    $default  reduce using rule 33 (statement)


State 60

   46 expression: variable • ASSIGNOP logic_expression
   59 factor: variable •
   65       | variable • INCOP
   66       | variable • DECOP

    INCOP     shift, and go to state 83
    DECOP     shift, and go to state 84
    ASSIGNOP  shift, and go to state 85

    $default  reduce using rule 59 (factor)


State 61

   42 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 86


State 62

   45 expression: logic_expression •

    $default  reduce using rule 45 (expression)


State 63

   47 logic_expression: rel_expression •
   48                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 87

    $default  reduce using rule 47 (logic_expression)


State 64

   49 rel_expression: simple_expression •
   50               | simple_expression • RELOP simple_expression
   52 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 88
    RELOP  shift, and go to state 89

    $default  reduce using rule 49 (rel_expression)


State 65

   51 simple_expression: term •
   54 term: term • MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 51 (simple_expression)


State 66

   53 term: unary_expression •

    $default  reduce using rule 53 (term)


State 67

   57 unary_expression: factor_info •

    $default  reduce using rule 57 (unary_expression)


State 68

   58 factor_info: factor •

    $default  reduce using rule 58 (factor_info)


State 69

   19 compound_statement: LCURL $@6 RCURL •

    $default  reduce using rule 19 (compound_statement)


State 70

   36 statement: IF LPAREN • expression RPAREN statement
   37          | IF LPAREN • expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 91
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 71

   35 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    expression_statement  go to state 92
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 72

   38 statement: WHILE LPAREN • expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 93
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 73

   40 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 94


State 74

   39 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 95


State 75

   59 factor: variable •
   65       | variable • INCOP
   66       | variable • DECOP

    INCOP  shift, and go to state 83
    DECOP  shift, and go to state 84

    $default  reduce using rule 59 (factor)


State 76

   55 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 55 (unary_expression)


State 77

   56 unary_expression: NOT unary_expression •

    $default  reduce using rule 56 (unary_expression)


State 78

   62 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 96


State 79

   61 factor: ID LPAREN • $@7 argument_list RPAREN

    $default  reduce using rule 60 ($@7)

    $@7  go to state 97


State 80

   44 variable: ID LTHIRD • expression RTHIRD

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 98
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 81

   17 compound_statement: LCURL $@5 statements RCURL •

    $default  reduce using rule 17 (compound_statement)


State 82

   30 statements: statements statement •

    $default  reduce using rule 30 (statements)


State 83

   65 factor: variable INCOP •

    $default  reduce using rule 65 (factor)


State 84

   66 factor: variable DECOP •

    $default  reduce using rule 66 (factor)


State 85

   46 expression: variable ASSIGNOP • logic_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 75
    logic_expression   go to state 99
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 86

   42 expression_statement: expression SEMICOLON •

    $default  reduce using rule 42 (expression_statement)


State 87

   48 logic_expression: rel_expression LOGICOP • rel_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 75
    rel_expression     go to state 100
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 88

   52 simple_expression: simple_expression ADDOP • term

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 75
    term              go to state 101
    unary_expression  go to state 66
    factor_info       go to state 67
    factor            go to state 68


State 89

   50 rel_expression: simple_expression RELOP • simple_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 75
    simple_expression  go to state 102
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 90

   54 term: term MULOP • unary_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable          go to state 75
    unary_expression  go to state 103
    factor_info       go to state 67
    factor            go to state 68


State 91

   36 statement: IF LPAREN expression • RPAREN statement
   37          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 104


State 92

   35 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    expression_statement  go to state 105
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 93

   38 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 106


State 94

   40 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 40 (statement)


State 95

   39 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 96

   62 factor: LPAREN expression RPAREN •

    $default  reduce using rule 62 (factor)


State 97

   61 factor: ID LPAREN $@7 • argument_list RPAREN

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    $default  reduce using rule 68 (argument_list)

    variable           go to state 75
    logic_expression   go to state 108
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68
    argument_list      go to state 109
    arguments          go to state 110


State 98

   44 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 111


State 99

   46 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 46 (expression)


State 100

   48 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 48 (logic_expression)


State 101

   52 simple_expression: simple_expression ADDOP term •
   54 term: term • MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 52 (simple_expression)


State 102

   50 rel_expression: simple_expression RELOP simple_expression •
   52 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 88

    $default  reduce using rule 50 (rel_expression)


State 103

   54 term: term MULOP unary_expression •

    $default  reduce using rule 54 (term)


State 104

   36 statement: IF LPAREN expression RPAREN • statement
   37          | IF LPAREN expression RPAREN • statement ELSE statement

    IF           shift, and go to state 42
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 35
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 10
    statement             go to state 112
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 105

   35 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 60
    expression         go to state 113
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 106

   38 statement: WHILE LPAREN expression RPAREN • statement

    IF           shift, and go to state 42
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 35
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    func_definition       go to state 54
    compound_statement    go to state 55
    variable_decl         go to state 56
    type_specifier        go to state 10
    statement             go to state 114
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor_info           go to state 67
    factor                go to state 68


State 107

   39 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 115


State 108

   70 arguments: logic_expression •

    $default  reduce using rule 70 (arguments)


State 109

   61 factor: ID LPAREN $@7 argument_list • RPAREN

    RPAREN  shift, and go to state 116


State 110

   67 argument_list: arguments •
   69 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 117

    $default  reduce using rule 67 (argument_list)


State 111

   44 variable: ID LTHIRD expression RTHIRD •

    $default  reduce using rule 44 (variable)


State 112

   36 statement: IF LPAREN expression RPAREN statement •
   37          | IF LPAREN expression RPAREN statement • ELSE statement

    ELSE  shift, and go to state 118

    $default  reduce using rule 36 (statement)


State 113

   35 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 119


State 114

   38 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 38 (statement)


State 115

   39 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 39 (statement)


State 116

   61 factor: ID LPAREN $@7 argument_list RPAREN •

    $default  reduce using rule 61 (factor)


State 117

   69 arguments: arguments COMMA • logic_expression

    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53

    variable           go to state 75
    logic_expression   go to state 120
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor_info        go to state 67
    factor             go to state 68


State 118

   37 statement: IF LPAREN expression RPAREN statement ELSE • statement

    IF           shift, and go to state 42
    FOR          shift, and go to state 43
    WHILE        shift, and go to state 44
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 45
    PRINTLN      shift, and go to state 46
    ADDOP        shift, and go to state 47
    NOT          shift, and go to state 48
    LPAREN       shift, and go to state 49
    LCURL        shift, and go to state 35
    SEMICOLON    shift, and go to state 50
    CONST_INT    shift, and go to state 51
    CONST_FLOAT  shift, and go to state 52
    ID           shift, and go to state 53
